pubsub eventmanager to dirty remove asteroids

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,25 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 282,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
     "import pygame\n",
     "from pygame.event import Event\n",
     "from pygame.math import Vector2\n",
     "from typing import NamedTuple, Tuple, List, Callable, Optional\n",
-    "import os\n",
-    "import sys\n",
+    "from collections import defaultdict\n",
+    "from typing import TypeVar, Type, List, Generic\n",
     "\n",
     "\n",
     "class SystemContext(NamedTuple):\n",
@@ -119,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,23 +254,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Component Manager**\n",
-    "- `add`\n",
-    "- `remove`\n",
-    "- `get`\n",
-    "- `return entities` given `component set`"
+    "##### **PubSub Manager**\n",
+    "- `subscribe` to `event` and pass `callback`\n",
+    "- `publish` event"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "from typing import TypeVar, Type, List, Generic\n",
+    "class PubSubEventManagerABC(ABC):\n",
+    "    \"\"\"Interface for a Publish and Subcribe Class\"\"\"\n",
     "\n",
-    "# `TypeVar` is a class from the `typing` module. It is used to create a generic\n",
+    "    @abstractmethod\n",
+    "    def subscribe(self, event_name, callback) -> None:\n",
+    "        \"\"\"subscribe to [event] name and pass [callback] method\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def publish(self, event_name, **kwargs) -> None:\n",
+    "        \"\"\"publish [event] name\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class PubSubEventManager(PubSubEventManagerABC):\n",
+    "    def __init__(self):\n",
+    "        self.listeners = {}\n",
+    "\n",
+    "    def subscribe(self, event_name, callback) -> None:\n",
+    "        super().subscribe(event_name, callback)\n",
+    "        if event_name not in self.listeners:\n",
+    "            # print(f'[PubSubEventManager] : Subscribed to \"{event_name}\"')\n",
+    "            self.listeners[event_name] = []\n",
+    "        self.listeners[event_name].append(callback)\n",
+    "\n",
+    "    def publish(self, event_name, **kwargs) -> None:\n",
+    "        super().publish(event_name, **kwargs)\n",
+    "        if event_name in self.listeners:\n",
+    "            # print(f'[PubSubEventManager] : Published \"{event_name}\"')\n",
+    "            for callback in self.listeners[event_name]:\n",
+    "                callback(**kwargs)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Component Manager**\n",
+    "- `add`\n",
+    "- `remove`\n",
+    "- `get`\n",
+    "- `gather` entities `given` component set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# type variable `T`. This allows you to define a function that works with any\n",
     "# type, while still providing type hints for better code readability and\n",
     "# editor support.\n",
@@ -305,21 +343,26 @@
     "        \"\"\"Get a component of a specific type from an entity\"\"\"\n",
     "\n",
     "    @abstractmethod\n",
-    "    def get_entities_with_all_components(\n",
+    "    def gather_entities_with_all_components(\n",
     "        self, component_types: List[Type]\n",
     "    ) -> Optional[List[Entity]]:\n",
-    "        \"\"\"Get a list of entities that have ALL of the specified COMPONENTS\"\"\"\n",
+    "        \"\"\"Gather a list of entities that have ALL of the specified COMPONENTS\"\"\"\n",
     "\n",
     "\n",
     "# Implement a simple ComponentManager class that manages a dictionary of components\n",
     "class ComponentManager(ComponentManagerABC):\n",
-    "    def __init__(self):\n",
+    "    # Define constants for the event names to publish and subscribe to\n",
+    "    ADD_COMPONENT = \"add_component\"\n",
+    "    REMOVE_COMPONENT = \"remove_component\"\n",
+    "\n",
+    "    def __init__(self, event_manager: PubSubEventManager):\n",
     "        # With a `defaultdict`, you can directly add a component without first\n",
     "        # checking if the `entity.id` exists in `self.components`.\n",
     "        # If the `entity.id` is not present, a new dictionary will be created\n",
     "        # automatically :\n",
     "        # - simplifies the code for `add_component`\n",
     "        self.components = defaultdict(dict)\n",
+    "        self.event_manager = event_manager\n",
     "\n",
     "    def add_component(self, entity, component) -> None:\n",
     "        # - defaultdict will automatically create a new dictionary for the entity\n",
@@ -336,10 +379,18 @@
     "                f\"[ERROR] tried to --add_component-- [{type(component).__name__}] that already exists on entity [{entity.name}]\"\n",
     "            )\n",
     "        self.components[entity.id][type(component)] = component\n",
+    "        self.event_manager.publish(\n",
+    "            ComponentManager.ADD_COMPONENT, entity=entity, component=component\n",
+    "        )\n",
     "\n",
     "    def remove_component(self, entity, component_type: Type) -> None:\n",
     "        try:\n",
     "            del self.components[entity.id][component_type]\n",
+    "            self.event_manager.publish(\n",
+    "                ComponentManager.REMOVE_COMPONENT,\n",
+    "                entity=entity,\n",
+    "                component_type=component_type,\n",
+    "            )\n",
     "        except KeyError:\n",
     "            raise ValueError(\n",
     "                f\"[ERROR] tried to --remove_component-- [{component_type.__name__}] that already exists on entity [{entity.name}]\"\n",
@@ -360,7 +411,7 @@
     "                f\"[ERROR] tried to --get_component-- [{component_type.__name__}] that does not exist on entity [{entity.name}]\"\n",
     "            )\n",
     "\n",
-    "    def get_entities_with_all_components(\n",
+    "    def gather_entities_with_all_components(\n",
     "        self, component_types: Optional[List[Type]]\n",
     "    ) -> Optional[List[Entity]]:\n",
     "        # early exit with None if no component types passed in\n",
@@ -399,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,33 +660,54 @@
     "    def __init__(\n",
     "        self,\n",
     "        c_manager: ComponentManager,\n",
+    "        event_manager: PubSubEventManager,\n",
     "        components: Optional[List[Type[ComponentABC]]] = None,\n",
     "    ) -> None:\n",
     "        \"\"\"\n",
     "        Initialize the SystemABC instance\n",
-    "        :param c_manager: ComponentManager instance\n",
+    "        :param c_manager: ComponentManager events subscribe to change and regather cached entities\n",
     "        :param components: List of components to filter entities\n",
     "        \"\"\"\n",
     "        self._c_manager = c_manager\n",
+    "        self.event_manager = event_manager\n",
+    "        # @todo : Subscribe to events\n",
+    "        event_manager.subscribe(\n",
+    "            ComponentManager.ADD_COMPONENT, self.on_add_component_dirty\n",
+    "        )\n",
+    "        event_manager.subscribe(\n",
+    "            ComponentManager.REMOVE_COMPONENT, self.on_remove_component_dirty\n",
+    "        )\n",
+    "\n",
     "        self._components = components\n",
     "        self.entities: Optional[List[Entity]] = None\n",
-    "        self.entities = EntitySystemABC.try_gather_all_entities(\n",
+    "        self.entities = EntitySystemABC.gather_system_entities(\n",
     "            self._c_manager, self._components\n",
     "        )\n",
-    "        print(f\"[entities] Initial gathering for {self.__class__.__name__}\")\n",
+    "        print(\n",
+    "            f\"[entities] on_init gathering system cache for {self.__class__.__name__}\"\n",
+    "        )\n",
+    "\n",
+    "    def on_add_component_dirty(self, entity, component) -> None:\n",
+    "        self.set_dirty()\n",
+    "\n",
+    "    def on_remove_component_dirty(self, entity, component_type) -> None:\n",
+    "        print(f\"e[entities] on_remove_component_dirty {entity} {component_type}\")\n",
+    "        self.set_dirty()\n",
     "\n",
     "    def update(self, **kwargs) -> None:\n",
     "        \"\"\"Update the system with the given component manager\"\"\"\n",
     "        pass\n",
     "\n",
     "    def set_dirty(self) -> None:\n",
-    "        print(f\"[entities] on_dirty regathering for {self.__class__.__name__}\")\n",
-    "        self.entities = EntitySystemABC.try_gather_all_entities(\n",
+    "        print(\n",
+    "            f\"[entities] on_dirty regathering sytem cache for {self.__class__.__name__}\"\n",
+    "        )\n",
+    "        self.entities = EntitySystemABC.gather_system_entities(\n",
     "            self._c_manager, self._components\n",
     "        )\n",
     "\n",
     "    @staticmethod\n",
-    "    def try_gather_all_entities(\n",
+    "    def gather_system_entities(\n",
     "        c_manager: ComponentManager, components: Optional[List[Type[ComponentABC]]]\n",
     "    ) -> Optional[List[Entity]]:\n",
     "        \"\"\"return a list of entities that have all the given components\"\"\"\n",
@@ -645,7 +717,7 @@
     "        if components is None:\n",
     "            return entities\n",
     "        else:\n",
-    "            entities = c_manager.get_entities_with_all_components(components)\n",
+    "            entities = c_manager.gather_entities_with_all_components(components)\n",
     "        return entities\n"
    ]
   },
@@ -659,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,12 +913,13 @@
     "    def __init__(\n",
     "        self,\n",
     "        c_manager: ComponentManager,\n",
+    "        event_manager : PubSubEventManager,\n",
     "        components: List[Type[ComponentABC]],\n",
     "        screen: pygame.Surface,\n",
     "        clock: pygame.time.Clock,\n",
     "    ):\n",
     "        \"\"\"Render to surface with given clock\"\"\"\n",
-    "        super().__init__(c_manager, components)\n",
+    "        super().__init__(c_manager, event_manager, components)\n",
     "        self.screen = screen\n",
     "        self.clock = clock\n",
     "\n",
@@ -864,51 +937,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **EntityComponentSystemManager**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List\n",
-    "from abc import ABC\n",
-    "\n",
-    "class EntityComponentSystemManager(ComponentManager):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super().__init__(**kwargs)\n",
-    "        self.systems = self._gather_systems()\n",
-    "\n",
-    "    def _gather_systems(self)->List[EntitySystemABC]:\n",
-    "        systems_inherited = EntitySystemABC.__subclasses__()\n",
-    "        return [system(self) for system in systems_inherited]\n",
-    "\n",
-    "    def _set_dirty(self):\n",
-    "        for system in self.systems:\n",
-    "            system.set_dirty()\n",
-    "\n",
-    "    def remove_component(self, entity, component_type: Type) -> None:\n",
-    "        super().remove_component(entity, component_type)\n",
-    "        self._set_dirty()\n",
-    "\n",
-    "    def add_component(self, entity, component) -> None:\n",
-    "        super().add_component(entity, component)\n",
-    "        self._set_dirty()\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##### **UI and Text Blit**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,13 +1012,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
     "def debug_player_rotation(c_manager: ComponentManager) -> Optional[Rotation]:\n",
     "    \"\"\"Debug player rotation\"\"\"\n",
-    "    player_entities = c_manager.get_entities_with_all_components(\n",
+    "    player_entities = c_manager.gather_entities_with_all_components(\n",
     "        [Shape, Input, Rotation]\n",
     "    )\n",
     "    if player_entities:\n",
@@ -1000,28 +1034,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Main**"
+    "##### **Handle Events**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 298,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[entities] Initial gathering for InputSystem\n",
-      "[entities] Initial gathering for PositioningSystem\n",
-      "[entities] Initial gathering for RotationalSystem\n",
-      "[entities] Initial gathering for AnimateAsteroidsSystem\n",
-      "[entities] Initial gathering for ShapeDrawSystem\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "def handle_events(\n",
     "    frame_events: List[Event],\n",
     "    input_system: InputSystem,\n",
@@ -1038,10 +1059,10 @@
     "                is_super_hot = not is_super_hot\n",
     "            elif event.key == pygame.K_j:\n",
     "                # delete an asteroid\n",
-    "                entities = c_manager.get_entities_with_all_components([Asteroid])\n",
+    "                entities = c_manager.gather_entities_with_all_components([Asteroid, Shape])\n",
     "                if entities:\n",
     "                    print(f\"Deleting Asteroid {entities[0]}\")\n",
-    "                    c_manager.remove_component(entities[0], Asteroid)\n",
+    "                    c_manager.remove_component(entities[0], Shape)\n",
     "        # check if the event a keyboard or mouse event\n",
     "        if event.type in (\n",
     "            pygame.KEYDOWN,\n",
@@ -1051,13 +1072,28 @@
     "        ):\n",
     "            # Update input system\n",
     "            input_system.update(event=event)\n",
-    "    return is_super_hot\n",
-    "\n",
-    "\n",
+    "    return is_super_hot\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Main**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def main() -> None:\n",
     "    # [INIT] - systems, context and COMPONENT managers\n",
     "    context_sys = on_awake()\n",
-    "    c_manager = ComponentManager()\n",
+    "    event_manager = PubSubEventManager()\n",
+    "    c_manager = ComponentManager(event_manager)\n",
     "\n",
     "    # [INIT] - game ENTITIES\n",
     "    # @note 🧠 : Populate entities BEFORE systems, so we can cache entities on\n",
@@ -1068,21 +1104,24 @@
     "    spawn_asteroids(5, c_manager)\n",
     "\n",
     "    # [INIT] - game SYSTEMS\n",
-    "    input_system = InputSystem(c_manager, [Input, Velocity, Rotation])\n",
+    "    input_system = InputSystem(c_manager, event_manager, [Input, Velocity, Rotation])\n",
     "    positioning_system = PositioningSystem(\n",
-    "        c_manager, [Shape, Position, Rotation, Velocity]\n",
+    "        c_manager, event_manager, [Shape, Position, Rotation, Velocity]\n",
     "    )\n",
-    "    rotational_system = RotationalSystem(c_manager, [Shape, Rotation])\n",
+    "    rotational_system = RotationalSystem(c_manager, event_manager, [Shape, Rotation])\n",
     "    animate_asteroids_system = AnimateAsteroidsSystem(\n",
-    "        c_manager, [Asteroid, HasKeyFrame, Transform]\n",
+    "        c_manager, event_manager, [Asteroid, HasKeyFrame, Transform]\n",
     "    )\n",
     "    # get entities with POSITION (where) AND SHAPE (what) to render\n",
     "    shape_draw_system = ShapeDrawSystem(\n",
     "        c_manager,\n",
+    "        event_manager,\n",
     "        [Shape, Position],\n",
     "        context_sys.screen,\n",
     "        context_sys.clock,\n",
     "    )\n",
+    "\n",
+    "    # [INIT] - frame SYSTEMS\n",
     "    text_blit_system_fps = TextBlitSystem(context_sys.screen, (280, 430))\n",
     "    text_blit_system_event = TextBlitSystem(context_sys.screen, (10, 450), 18)\n",
     "    end_frame_tick_system = EndFrameTickSystem(context_sys.screen, context_sys.clock)\n",
@@ -1154,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
