--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,8 @@
     "import pygame\n",
     "from pygame.event import Event\n",
     "from pygame.math import Vector2\n",
-    "from typing import NamedTuple, Tuple, List, Callable, Optional\n",
+    "from typing import NamedTuple, Tuple, List, Callable, Optional, TypeVar, Type, Dict, Any\n",
     "from collections import defaultdict\n",
-    "from typing import TypeVar, Type, List, Generic\n",
     "\n",
     "\n",
     "class SystemContext(NamedTuple):\n",
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,10 +357,12 @@
     "    def __init__(self, event_manager: PubSubEventManager):\n",
     "        # With a `defaultdict`, you can directly add a component without first\n",
     "        # checking if the `entity.id` exists in `self.components`.\n",
-    "        # If the `entity.id` is not present, a new dictionary will be created\n",
-    "        # automatically :\n",
+    "        # The `defaultdict` is a specialized version of the built-in `dict` that\n",
+    "        # provides a default value for a key if the key is not found in the \n",
+    "        # dictionary. In this case, if a key is not found, it will automatically \n",
+    "        # create a new empty dictionary as its value.\n",
     "        # - simplifies the code for `add_component`\n",
-    "        self.components = defaultdict(dict)\n",
+    "        self.components : Dict[int, Dict[Type, Any]] = defaultdict(dict)\n",
     "        self.event_manager = event_manager\n",
     "\n",
     "    def add_component(self, entity, component) -> None:\n",
@@ -393,7 +394,7 @@
     "            )\n",
     "        except KeyError:\n",
     "            raise ValueError(\n",
-    "                f\"[ERROR] tried to --remove_component-- [{component_type.__name__}] that already exists on entity [{entity.name}]\"\n",
+    "                f\"[ERROR] tried to --remove_component-- [{component_type.__name__}] that does not exist on entity [{entity.name}]\"\n",
     "            )\n",
     "\n",
     "    def get_component(self, entity, component_type: Type[T]) -> T:\n",
@@ -413,10 +414,10 @@
     "\n",
     "    def gather_entities_with_all_components(\n",
     "        self, component_types: Optional[List[Type]]\n",
-    "    ) -> Optional[List[Entity]]:\n",
+    "    ) -> List[Entity]:\n",
     "        # early exit with None if no component types passed in\n",
     "        if component_types is None:\n",
-    "            return None\n",
+    "            return []\n",
     "        # @audit 💨 : Convert the list of component types to a set for faster lookup\n",
     "        # - in O(1) time instead of O(n) time where n is # of component types\n",
     "        # - order of component types passed in does not matter, any permutation\n",
@@ -426,9 +427,6 @@
     "        for entity_id, components in self.components.items():\n",
     "            if component_set.issubset(set(components.keys())):\n",
     "                entities.append(Entity(entity_id))\n",
-    "        # if no entities found, return None\n",
-    "        if len(entities) == 0:\n",
-    "            return None\n",
     "        return entities\n"
    ]
   },
@@ -450,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
