unit test pubsub manager

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,41 +269,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PubSubEventManagerABC(ABC):\n",
-    "    \"\"\"Interface for a Publish and Subcribe Class\"\"\"\n",
+    "\"\"\"\n",
+    "If `pubsub_event_manager.py` is saved under a folder named `library`, you can \n",
+    "import `PubSubEventManager` using a slightly modified import statement in your \n",
+    "other Python files:\n",
+    "- First, make sure that the `library` folder contains an empty file named `__init__.py`. \n",
+    "- This file tells Python that the folder should be treated as a packa∏ge.\n",
+    "\"\"\"\n",
     "\n",
-    "    @abstractmethod\n",
-    "    def subscribe(self, event_name, callback) -> None:\n",
-    "        \"\"\"subscribe to [event] name and pass [callback] method\"\"\"\n",
-    "        pass\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def publish(self, event_name, **kwargs) -> None:\n",
-    "        \"\"\"publish [event] name\"\"\"\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "class PubSubEventManager(PubSubEventManagerABC):\n",
-    "    def __init__(self):\n",
-    "        self.listeners = {}\n",
-    "\n",
-    "    def subscribe(self, event_name, callback) -> None:\n",
-    "        super().subscribe(event_name, callback)\n",
-    "        if event_name not in self.listeners:\n",
-    "            # print(f'[PubSubEventManager] : Subscribed to \"{event_name}\"')\n",
-    "            self.listeners[event_name] = []\n",
-    "        self.listeners[event_name].append(callback)\n",
-    "\n",
-    "    def publish(self, event_name, **kwargs) -> None:\n",
-    "        super().publish(event_name, **kwargs)\n",
-    "        if event_name in self.listeners:\n",
-    "            # print(f'[PubSubEventManager] : Published \"{event_name}\"')\n",
-    "            for callback in self.listeners[event_name]:\n",
-    "                callback(**kwargs)\n"
+    "from library.pubsub_event_manager import PubSubEventManager"
    ]
   },
   {
@@ -311,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,9 +1070,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[entities] on_init gathering system cache for InputSystem\n",
+      "[entities] on_init gathering system cache for PositioningSystem\n",
+      "[entities] on_init gathering system cache for RotationalSystem\n",
+      "[entities] on_init gathering system cache for AnimateAsteroidsSystem\n",
+      "[entities] on_init gathering system cache for ShapeDrawSystem\n",
+      "Deleting Asteroid <__main__.Entity object at 0x10d0cee50>\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for InputSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0cee50> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
+      "Deleting Asteroid <__main__.Entity object at 0x10d0ce520>\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for InputSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
+      "e[entities] on_remove_component_dirty <__main__.Entity object at 0x10d0ce520> <class '__main__.Shape'>\n",
+      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n"
+     ]
+    }
+   ],
    "source": [
     "def main() -> None:\n",
     "    # [INIT] - systems, context and COMPONENT managers\n",
@@ -1191,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
